--- a/template/default/common/footer.htm
+++ b/template/default/common/footer.htm
@@ -180,5 +180,10 @@
 	</script>
 <!--{/if}-->
 <!--{eval output();}-->
-</body>
+    <script type="text/javascript">
+        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F5e254ca90e23098ed41dc9dd4d4024ca' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+
+    </body>
 </html>
